  Changes:
    - Added shared damage exclusion for "snowball" type damage to avoid conflicting with that mod.
    - Shared damage reduced to 75%
  Bugfixes:
    - Correct intermittent crash for some players with scheduled event functions shown in logs.
    - Fix crash when a vehicle died by non mod means.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.12
Date: 2019-11-23
  Features:
    - Added mode "December 2019"
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.11
Date: 2019-05-31
  Features:
    - Added mode "June 2019"
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.10
Date: 2019-05-19
  Features:
  Changes:
    - Made mod selection mode names descriptive.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.9
Date: 2019-05-17
  Features:
    - Added mode for JD & P00bers May 2019 multiplayer series.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.8
Date: 2019-05-08
  Features:
    - May 2019 mode - add "biters_attack_now" command for admins only
  Changes:
  Bugfixes:
    - May 2019 mode - Fixed crash loading previous version save.
  Info:
    - Made all localisation texts truely uniquely named to avoid future conflicts.
---------------------------------------------------------------------------------------------------
Version: 17.0.7
Date: 2019-05-07
  Features:
  Changes:
  Bugfixes:
  Info:
    - May 2019 mode - GUI texts made bold so more prominent on stream.
---------------------------------------------------------------------------------------------------
Version: 17.0.6
Date: 2019-05-05
  Features:
  Changes: